projectwork/manifest/consumer-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer-microservice
  labels:
    app: microservice-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: microservice-app
        service: consumerService
    spec:
      containers:
        - name: consumer-deployment
          image: alyanovao/consumerservice:1.0.0
          ports:
            - containerPort: 8101
          imagePullPolicy: Always
