projectwork/manifest/event-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-microservice
  labels:
    app: microservice-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: microservice-app
        service: eventService
    spec:
      containers:
        - name: event-deploymnet
          image: alyanovao/eventservice:1.0.0
          ports:
            - containerPort: 8100
          imagePullPolicy: Always
