projectwork/manifest/consumer-service.yml
apiVersion: v1
kind: Service
metadata:
  name: consumerservice
  labels:
    app: microservice-app
spec:
  type: ClusterIP
  selector:
    service: consumerService
  ports:
    - port: 8101
      name: web
      protocol: TCP
      targetPort: 8101
