projectwork/manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /event
            pathType: Prefix
            backend:
              service:
                name: eventservice
                port:
                  number: 8100
          - path: /visualization
            pathType: Prefix
            backend:
              service:
                name: visualizationservice
                port:
                  number: 8080
